<resources>
    <string name="app_name">mp3player</string>
    <string name="volume_up">speaker image</string>
    <string name="volume_down">speker image</string>
    <string name="music_file">Glass animals.mp3</string>
    <string name="file_image">file image file</string>
    <string name="timer_start">00:00</string>
    <string name="music_image">music image</string>
    <string name="music_common">music common image</string>
</resources>