<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/minvolume"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/volume_up"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_volume_down_24"/>

        <SeekBar
            android:id="@+id/volumeseek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

        <ImageView
            android:id="@+id/maxvolume"
            android:layout_width="30dp"
            android:contentDescription="@string/volume_down"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_volume_up_24"
            android:layout_height="30dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:text="@string/music_file"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:id="@+id/viewmusicfilename"/>
    <ImageView
        android:contentDescription="@string/file_image"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_music_note_24"
        android:layout_height="200dp"/>
    <SeekBar
        android:id="@+id/musicseek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_start"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:id="@+id/textviewprogress"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_start"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="290dp"
            android:id="@+id/textviewtotaltime"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/previousbutton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/nextbtn"
            android:rotationY="-184" />
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/pausebtn"
            android:id="@+id/pausebutton"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/nextbtn"
            android:id="@+id/nextbutton"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>

</LinearLayout>